--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+     <script src="app.json" type="app.js"></script> 
     <script async src="app.js"></script>
     <title>FishEye</title>
 </head>
@@ -13,7 +14,7 @@
     <index-page>
         <div class="header_wrapper"role="banner"> 
             <a aria label="FishEye" href="#" class="header-svg">
-               <svg width="180" height="50" viewBox="0 0 200 50" fill="none" xmlns="http://www.w3.org/2000/svg" role= "img">
+               <svg width="150" height="50" viewBox="0 0 200 50" fill="none" xmlns="http://www.w3.org/2000/svg" role= "img">
                     <path d="M24.7206 0.911621V6.51058H6.31164V17.5783H21.4333V22.9168H6.31164V39.1929H0V0.911621H24.7206Z" fill="#911C1C"/>
                     <path d="M34.5826 1.04167C35.2401 1.69271 35.6346 2.60417 35.6346 3.64583C35.6346 4.6875 35.2401 5.46875 34.5826 6.11979C33.9252 6.77083 33.0047 7.16146 31.9528 7.16146C30.9008 7.16146 30.1119 6.77083 29.3229 6.11979C28.6655 5.46875 28.271 4.55729 28.271 3.64583C28.271 2.60417 28.6655 1.82292 29.3229 1.04167C29.9804 0.390625 30.9008 0 31.9528 0C33.0047 0 33.7937 0.390625 34.5826 1.04167ZM34.8456 11.1979V39.1927H28.9285V11.1979H34.8456Z" fill="#911C1C"/>
                    <path d="M43.261 36.9792C40.8941 35.2865 39.7107 32.9427 39.7107 29.9479H45.4964C45.6279 31.3802 46.2853 32.6823 47.6002 33.5937C48.9152 34.5052 50.4931 35.026 52.4655 35.026C54.3064 35.026 55.7528 34.6354 56.9362 33.9844C58.1196 33.3333 58.6456 32.4219 58.6456 31.25C58.6456 30.3385 58.3826 29.6875 57.8566 29.1667C57.3307 28.6458 56.6732 28.3854 55.7528 28.125C54.8323 27.8646 53.5174 27.7344 51.808 27.474H51.6765L50.8876 27.3438C48.6522 27.0833 46.6798 26.6927 45.2334 26.1719C43.787 25.651 42.472 24.8698 41.6831 23.8281C40.7626 22.7865 40.3682 21.4844 40.3682 19.6615C40.3682 17.9688 40.8941 16.4063 41.8146 15.1042C42.735 13.8021 44.1814 12.7604 45.8908 11.9792C47.6002 11.1979 49.5726 10.9375 51.808 10.9375C55.3583 10.9375 58.2511 11.7188 60.355 13.2812C62.5904 14.8438 63.7738 17.0573 63.9053 19.9219H58.1196C57.9881 18.6198 57.3307 17.5781 56.1472 16.7969C54.9638 16.0156 53.5174 15.4948 51.808 15.4948C50.0986 15.4948 48.6522 15.8854 47.7317 16.5365C46.6798 17.1875 46.1538 18.099 46.1538 19.2708C46.1538 20.0521 46.4168 20.7031 46.8113 21.0938C47.3373 21.4844 47.9947 21.7448 48.7837 22.0052C49.5726 22.1354 50.7561 22.3958 52.334 22.526C52.4655 22.526 52.4655 22.526 52.597 22.526C52.7284 22.526 52.7284 22.526 52.8599 22.526C55.3583 22.7865 57.3307 23.1771 59.0401 23.6979C60.618 24.2188 62.0644 25 62.9849 26.1719C64.0368 27.3438 64.5628 28.9062 64.5628 30.8594C64.5628 32.5521 64.0368 34.1146 62.9849 35.4167C61.9329 36.7188 60.4865 37.7604 58.6456 38.5417C56.8047 39.1927 54.8323 39.5833 52.4655 39.5833C48.6522 39.4531 45.6279 38.6719 43.261 36.9792Z" fill="#911C1C"/>
@@ -28,25 +29,25 @@
                 <div class="container-header-navigation-item">
                     <tag-nav>
                          <a class="tag" href="/tag-portrait"> <span class="sr-only">
-                             # Portrait</span>
+                             # portrait</span>
                         </a>
                         <a class="tag" href="/tag-fashion"> <span class="sr-only">
-                           # Fashion</span>
+                           # fashion</span>
                         </a>
                         <a class="tag" href="/tag-architecture"> <span class="sr-only">
-                            # Architecture</span>
+                            # architecture</span>
                         </a>
                         <a class="tag" href="/tag-travel"> <span class="sr-only">
-                            # Travel</span>
+                            # travel</span>
                        </a>
                        <a class="tag" href="/tag-sport"> <span class="sr-only">
-                            # Sport</span>
+                            # sport</span>
                        </a>  
                        <a class="tag" href="/tag-animals"> <span class="sr-only">
-                            # Animals</span>
+                            # animals</span>
                       </a>
                       <a class="tag" href="/tag-events"> <span class="sr-only">
-                          # Events</span>
+                          # events</span>
                       </a>
                     </tag-nav>
                 </div>
@@ -60,9 +61,141 @@
 
         <main>
             <section>
-                 <div class="container-photographers">
+               <div class="container-photographers">
+                    <div class="grid">
+                       <div class="photographer_card_id_243 col-4" >
+                            <a href="" title="">Mimi Keel</a>
+                            <p class="photographer_text_location">London, UK</p>
+                            <p class="photographer_text_slogan">Voir le beau dans le quotidien</p>
+                            <p class="photographer_text_due">400€/jour</p>
+                            <photographer_tags class="photographer_text">
+                                <div>
+                                    <a class="tag" href="/tag-portrait"> <span class="sr-only">
+                                        # portrait</span>
+                                   </a>  
 
-                 </div>
+                                   <a class="tag" href="/tag-events"> <span class="sr-only">
+                                    # events</span>
+                                   </a>
+
+                                   <a class="tag" href="/tag-travel"> <span class="sr-only">
+                                    # travel</span>
+                                   </a>
+
+                                   <a class="tag" href="/tag-animals"> <span class="sr-only">
+                                    # animals</span>
+
+                                   </a>
+
+                                </div>
+                            </photographer_tags>
+                       </div>
+
+                       <div class="photographer_card_id_930 col-2">
+                            <a href="" title="">Ellie-Rose Wilkens</a>
+                            <p class="photographer_text_location">Paris, France</p>
+                            <p class="photographer_text_slogan">Capturer des compositions complexes</p>
+                            <p class="photographer_text_due">250€/jour</p>
+                            <photographer_tags class="photographer_text">
+                            <div>
+                                <a class="tag" href="/tag-sport"> <span class="sr-only">
+                                    # sport</span>
+                               </a>  
+
+                               <a class="tag" href="/tag-architecture"> <span class="sr-only">
+                                # architecture</span>
+                               </a>
+                            </div>
+                        </photographer_tags>
+                    </div>
+
+                    <div class="photographer_card_id_82 col-3">
+                        <a href="" title="">Tracy Galindo</a>
+                        <p class="photographer_text_location">Montreal, Canada</p>
+                        <p class="photographer_text_slogan">Photographe freelance</p>
+                        <p class="photographer_text_due">500€/jour</p>
+                        <photographer_tags class="photographer_text">
+                            <div>
+                                <a class="tag" href="/tag-art"><span class="sr-only">
+                                    # art</span>
+                               </a>  
+
+                               <a class="tag" href="/tag-fashion"><span class="sr-only">
+                                # fashion</span>
+                               </a>
+
+                               <a class="tag" href="/tag-events"> <span class="sr-only">
+                                # events</span>
+                               </a>
+
+                            </div>
+                        </photographer_tags>
+                   </div>
+
+                   <div class="photographer_card_id_527 col-2">
+                    <a href="" title="">Nabeel Bradford</a>
+                    <p class="photographer_text_location">Mexico City, Mexico</p>
+                    <p class="photographer_text_slogan">Toujours aller de l'avant</p>
+                    <p class="photographer_text_due">350€/jour</p>
+                    <photographer_tags class="photographer_text">
+                        <div>
+                            <a class="tag" href="/tag-travel"> <span class="sr-only">
+                                # travel</span>
+                           </a>  
+
+                           <a class="tag" href="/tag-portrait"> <span class="sr-only">
+                            # portrait</span>
+                           </a>
+
+                        </div>
+                    </photographer_tags>
+               </div>
+
+               <div class="photographer_card_id_925 col-4">
+                <a href="" title="">Rhode Dubois</a>
+                <p class="photographer_text_location">Barcelona, Spain</p>
+                <p class="photographer_text_slogan">Je crée des souvenirs</p>
+                <p class="photographer_text_due">275€/jour</p>
+                <photographer_tags class="photographer_text">
+                    <div>
+                        <a class="tag" href="/tag-sport"> <span class="sr-only">
+                            # sport</span>
+                       </a>  
+
+                       <a class="tag" href="/tag-fashion"> <span class="sr-only">
+                        # fashion</span>
+                       </a>
+
+                       <a class="tag" href="/tag-events"> <span class="sr-only">
+                        # events</span>
+                       </a>
+
+                       <a class="tag" href="/tag-animals"> <span class="sr-only">
+                        # animals</span>
+
+                       </a>
+
+                    </div>
+                </photographer_tags>
+           </div>
+
+           <div class="photographer_card_id_195 col-2">
+            <a href="" title="">Marcel Nikolic</a>
+            <p class="photographer_text_location">Berlin, Germany</p>
+            <p class="photographer_text_slogan">Toujours à la recherche de la photo</p>
+            <p class="photographer_text_due">300€/jour</p>
+            <photographer_tags class="photographer_text">
+                <div>
+                    <a class="tag" href="/tag-travel"> <span class="sr-only">
+                        # travel</span>
+                   </a>  
+
+                   <a class="tag" href="/tag-architecture"> <span class="sr-only">
+                    # architecture</span>
+                   </a>
+                </div>
+            </photographer_tags>
+       </div>
                       
             </section>
         </main>
